# Highlights

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_script.sh
docs/: youtube_api.md
docs/analysis/: eventmsgactiontype.md  eventmsgtype.md
docs/nba_api_responses/: live_boxscore.md  live_playbyplay.md  live_scoreboard.md  stats_playbyplayv2.md  stats_scoreboardV2.md  videodetails.md  videoeventsasset.md
highlights/: config.py  exceptions.py
highlights/database/: models.py
highlights/domain/: common.py
highlights/domain/deciders/: __init__.py  player_adapter.py  top_scorers_decider.py
highlights/domain/flow_managers/: __init__.py  basic_flow.py
highlights/domain/highlighters/: __init__.py  video_details_highlighter.py
highlights/domain/mergers/: basic_merger.py
highlights/domain/uploaders/: youtube_uploader.py
highlights/scripts/: cli_basic.py  decider_basic_flow_highlights.py  manual_basic_flow_highlights.py  prototype_highlights.py  scheduler.py
src/domain/highlighters/: __init__.py
src/domain/mergers/: __init__.py
src/domain/uploaders/: __init__.py
src/scripts/: player_highlights.py
tests/: conftest.py  test_common.py  test_configs.py
tests/deciders/: test_deciders.py
tests/test_deciders/: conftest.py  test_deciders.py
tests/test_highlighters/: conftest.py  test_video_details_highlighter.py
tests/test_mergers/: conftest.py  test_basic_merger.py
tests/test_uploaders/: test_youtube_uploader.py
