[tool.poetry]
name = "highlights"
version = "0.1.0"
description = "Auto creation and upload to YouTube videos of NBA games/players highlights"
authors = ["Nick Ferdman <ferdman.inc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
nba-api = "^1.1.13"
sqlalchemy = "^1.4.42"
loguru = "^0.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
