[tool.poetry]
name = "highlights"
version = "0.1.0"
description = "Auto creation and upload to YouTube videos of NBA games/players highlights"
authors = ["Nick Ferdman <ferdman.inc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
nba-api = "^1.1.13"
sqlalchemy = "^1.4.42"
loguru = "^0.6.0"
moviepy = "^1.0.3"
google-auth-oauthlib = "^0.7.1"
google-api-python-client = "^2.65.0"
google = "^3.0.0"
pydantic = "^1.10.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
